--- a/source/localizable/privacy.html.erb
+++ b/source/localizable/privacy.html.erb
@@ -5,152 +5,172 @@
 		</span>
 	</h1>
 </div>
+
 <div class="col-md-3">
 	<section class="scorecard">
-		<h2><%= t('dates.jan') %> – <%= t('dates.jun') %> 2017</h2>
+		<h2><%= t('dates.jul') %> – <%= t('dates.dec') %> 2017</h2>
 		<dl>
 			<dt><%= t('privacy.total_number_of_requests') %></dt>
-			<dd>18</dd>
+			<dd>15</dd>
 		</dl>
 	</section>
+
 	<section class="scorecard scorecard_bottom">
-		<h2><%= t('dates.jan') %> – <%= t('dates.jun') %> 2017</h2>
+		<h2><%= t('dates.jul') %> – <%= t('dates.dec') %> 2017</h2>
 		<dl>
 			<dt><%= t('privacy.percentage_of_times_information_produced') %></dt>
-			<dd>16.7<small>%</small></dd>
+			<dd>7<small>%</small></dd>
 		</dl>
 	</section>
+
 </div>
+
 <div class="col-md-8">
 	<p class="lead">
 		<%= t('privacy.lead') %>
 	</p>
+
 	<%= t('privacy.intro') %>
+
 	<blockquote>
 		<p><%= t('privacy.quote') %></p>
 		<footer>
-			<a href="https://commons.wikimedia.org/wiki/File:Sonia_Sotomayor_7_in_robe,_2009.jpg"><img src="./images/sonia.jpg" alt="<%= t('privacy.quote_image') %>"></a>
+			<a href="//commons.wikimedia.org/wiki/File:Sonia_Sotomayor_7_in_robe,_2009.jpg"><img src="./images/sonia.jpg"></a>
 			<p><%= t('privacy.cite') %></p>
 		</footer>
 	</blockquote>
 </div>
+
 <div class="col-md-12 summary__wrapper">
-	<div class="story summary_table">
-		<h3 id="summary">
-			<small><%= t('dates.jan') %> – <%= t('dates.jun') %> 2017</small><br>
-			<%= t('privacy.summary') %>
-		</h3>
-		<hr>
-		<table>
-			<tr class="highlight">
-				<td><%= t('privacy.total_number_of_requests') %></td>
-				<td>18</td>
-			</tr>
-			<tr>
-				<td class="indent">
-					<a href="./faq.html#informal_non_government_requests"><%= t('privacy.informal_non_govt') %>
-				</td>
-				<td>10</td>
-			</tr>
-			<tr>
-				<td class="indent">
-					<a href="./faq.html#informal_government_requests"><%= t('privacy.informal_govt') %></a>
-				</td>
-				<td>4</td>
-			</tr>
-			<tr>
-				<td class="indent">
-					<a href="./faq.html#civil_subpoena"><%= t('privacy.civil_subpoenas') %></a>
-				</td>
-				<td>3</td>
-			</tr>
-			<tr>
-				<td class="indent">
-					<a href="./faq.html#criminal_subpoena"><%= t('privacy.criminal_subpoenas') %></a>
-				</td>
-				<td>1</td>
-			</tr>
-			<tr>
-				<td class="indent">
-					<a href="./faq.html#administrative_subpoena"><%= t('privacy.administrative_subpoenas') %></a>
-				</td>
-				<td>0</td>
-			</tr>
-			<tr>
-				<td class="indent">
-					<a href="./faq.html#search_warrant"><%= t('privacy.search_warrants') %></a>
-				</td>
-				<td>0</td>
-			</tr>
-			<tr>
-				<td class="indent">
-					<a href="./faq.html#court_order"><%= t('privacy.court_orders') %></a>
-				</td>
-				<td>0</td>
-			</tr>
-			<tr class="last">
-				<td class="indent">
-					<a href="./faq.html#national_security_request"><%= t('privacy.national_security_requests') %></a>
-				</td>
-				<td>0</td>
-			</tr>
-			<tr class="highlight">
-				<td><%= t('privacy.information_produced') %></td>
-				<td>3</td>
-			</tr>
-		</table>
-	</div>
-	<div class="story story_bottom">
-		<h3>
-			<small><%= t('dates.jan') %> – <%= t('dates.jun') %> 2017</small><br>
-			<%= t('privacy.user_accounts_affected') %>
-		</h3>
-		<hr>
-		<table>
-			<tr class="indent">
-				<td><%= t('privacy.user_potentially_affected') %></td>
-				<td>23</td>
-			</tr>
-			<tr class="indent">
-				<td><%= t('privacy.user_actually_affected') %></td>
-				<td>3</td>
-			</tr>
-			<tr class="indent">
-				<td><%= t('privacy.user_accounts_notified') %></td>
-				<td>0</td>
-			</tr>
-		</table>
-	</div>
+
+		<div class="story summary_table">
+			<h3 id="summary">
+				<small><%= t('dates.jul') %> – <%= t('dates.dec') %> 2017</small><br />
+				<%= t('privacy.summary') %>
+			</h3>
+			<hr />
+			<table>
+				<tr class="highlight">
+					<td><%= t('privacy.total_number_of_requests') %></td>
+					<td>15</td>
+				</tr>
+				<tr>
+					<td class="indent">
+						<a href="./faq.html#informal_non_government_requests"><%= t('privacy.informal_non_govt') %>
+					</td>
+					<td>7</td>
+				</tr>
+				<tr>
+					<td class="indent">
+						<a href="./faq.html#informal_government_requests"><%= t('privacy.informal_govt') %></a>
+					</td>
+					<td>7</td>
+				</tr>
+				<tr>
+					<td class="indent">
+						<a href="./faq.html#civil_subpoena"><%= t('privacy.civil_subpoenas') %></a>
+					</td>
+					<td>1</td>
+				</tr>
+				<tr>
+					<td class="indent">
+						<a href="./faq.html#criminal_subpoena"><%= t('privacy.criminal_subpoenas') %></a>
+					</td>
+					<td>0</td>
+				</tr>
+				<tr>
+					<td class="indent">
+						<a href="./faq.html#administrative_subpoena"><%= t('privacy.administrative_subpoenas') %></a>
+					</td>
+					<td>0</td>
+				</tr>
+				<tr>
+					<td class="indent">
+						<a href="./faq.html#search_warrant"><%= t('privacy.search_warrants') %></a>
+					</td>
+					<td>0</td>
+				</tr>
+				<tr>
+					<td class="indent">
+						<a href="./faq.html#court_order"><%= t('privacy.court_orders') %></a>
+					</td>
+					<td>0</td>
+				</tr>
+				<tr class="last">
+					<td class="indent">
+						<a href="./faq.html#national_security_request"><%= t('privacy.national_security_requests') %></a>
+					</td>
+					<td>0</td>
+				</tr>
+				<tr class="highlight">
+					<td><%= t('privacy.information_produced') %></td>
+					<td>1</td>
+				</tr>
+			</table>
+		</div>
+
+		<div class="story story_bottom">
+			<h3>
+				<small><%= t('dates.jul') %> – <%= t('dates.dec') %> 2017</small><br />
+				<%= t('privacy.user_accounts_affected') %>
+			</h3>
+			<hr />
+			<table>
+				<tr class="indent">
+					<td><%= t('privacy.user_potentially_affected') %></td>
+					<td>20</td>
+				</tr>
+				<tr class="indent">
+					<td><%= t('privacy.user_actually_affected') %></td>
+					<td>2</td>
+				</tr>
+				<tr class="indent">
+					<td><%= t('privacy.user_accounts_notified') %></td>
+					<td>0</td>
+				</tr>
+			</table>
+		</div>
+
 </div>
+
 <div class="col-md-12 info_type">
+
 	<div class="col-md-6">
 		<h2 class="info_type__head"><%= t('privacy.info_type_title') %></h2>
 		<div><%= t('privacy.info_type_body') %></div>
 	</div>
+
 	<div class="col-md-3">
 		<section class="scorecard">
-			<h2><%= t('dates.jan') %> – <%= t('dates.jun') %> 2017</h2>
+			<h2><%= t('dates.jul') %> – <%= t('dates.dec') %> 2017</h2>
 			<dl>
 				<dt><%= t('privacy.content_requests') %></dt>
 				<dd>0<small>%</small></dd>
 			</dl>
 		</section>
 	</div>
+
 	<div class="col-md-3">
 		<section class="scorecard">
-			<h2><%= t('dates.jan') %> – <%= t('dates.jun') %> 2017</h2>
+			<h2><%= t('dates.jul') %> – <%= t('dates.dec') %> 2017</h2>
 			<dl>
 				<dt><%= t('privacy.non-content_requests') %></dt>
 				<dd>100<small>%</small></dd>
 			</dl>
 		</section>
 	</div>
+
 </div>
+
 <div class="col-md-12">
 	<div class="analytics">
 		<h2 id="compared-companies"><%= t('privacy.compared_to_others') %>*</h2>
 		<ul class="tabs">
-			<li><a id="bubble_graph_janjun16" class="bubble_graph_tabs active" href="javascript: void(0);"><%= t('dates.jul') %> - <%= t('dates.dec') %> 2016</a></li>
+			<li>
+				<a id="bubble_graph_janjun16" class="bubble_graph_tabs active" href="javascript: void(0);">
+					<%= t('dates.jan') %> - <%= t('dates.jun') %> 2017
+				</a>
+			</li>
 		</ul>
 		<div id="compare_graph" class="bubble_graph"></div>
 		<div class="legends">
@@ -165,8 +185,10 @@
 			</div>
 		</div>
 	</div>
+
 </div>
 <div class="clear"></div>
+
 <div class="col-md-12">
 	<div class="analytics">
 		<h2 id="user-data"><%= t('privacy.request_response') %></h2>
@@ -180,7 +202,8 @@
 			<li><a id="user_data_juldec15" class="user_data_tabs" href="javascript: void(0);"><%= t('dates.jul') %> - <%= t('dates.dec') %> 2015</a></li>
 			<li><a id="user_data_janjun16" class="user_data_tabs" href="javascript: void(0);"><%= t('dates.jan') %> - <%= t('dates.jun') %> 2016</a></li>
 			<li><a id="user_data_juldec16" class="user_data_tabs" href="javascript: void(0);"><%= t('dates.jul') %> - <%= t('dates.dec') %> 2016</a></li>
-			<li><a id="user_data_janjun17" class="user_data_tabs active" href="javascript: void(0);"><%= t('dates.jan') %> - <%= t('dates.jun') %> 2017</a></li>
+			<li><a id="user_data_janjun17" class="user_data_tabs" href="javascript: void(0);"><%= t('dates.jan') %> - <%= t('dates.jun') %> 2017</a></li>
+			<li><a id="user_data_juldec17" class="user_data_tabs active" href="javascript: void(0);"><%= t('dates.jul') %> - <%= t('dates.dec') %> 2017</a></li>
 		</ul>
 		<div class="graph">
 			<div class="row">
@@ -190,10 +213,12 @@
 					<h3><%= t('privacy.information_produced_title') %></h3>
 					<div>
 						<p id="all" class="legend legend_yes"><%= t('yn.all') %></p>
-						<p id="yes" class="legend legend_yes inactive"><%= t('yn.yess') %></p>
-						<p id="partial" class="legend legend_partial"><%= t('yn.pr') %></p>
+						<p id="partial" class="legend legend_partial"><%= t('yn.pr') %>*</p>
 						<p id="none" class="legend legend_no"><%= t('yn.none') %></p>
-						<p id="no" class="legend legend_no inactive"><%= t('yn.noo') %></p>
+					</div>
+					<div class="fineprint fineprint--partial_legend">
+						<h2>*</h2>
+						<p><%= t('yn.partial_legend_info') %></p>
 					</div>
 				</div>
 				<div class="col-md-7">
@@ -203,135 +228,153 @@
 			</div>
 		</div>
 	</div>
+
 </div>
+
 <div class="col-md-8 col-md-offset-2">
 	<div class="story">
 		<h3>
-			<small><%= t('dates.jan') %> – <%= t('dates.jun') %> 2017</small><br>
+			<small><%= t('dates.jul') %> – <%= t('dates.dec') %> 2017</small><br />
 			<%= t('privacy.govt_requests') %>
 		</h3>
-		<hr>
+		<hr />
 		<table>
 			<tr class="highlight">
 				<td><%= t('graph.informal_government_requests') %></td>
 				<td>Total</td>
-				<td>4</td>
+				<td>7</td>
 			</tr>
 			<tr>
-				<td class="indent"><%= t('graph.india') %></td>
+				<td class="indent"><%= t('graph.australia') %></td>
+				<td><%= t('graph.federal_police') %></td>
+				<td>1</td>
+			</tr>
+			<tr>
+				<td class="indent noborder"><%= t('graph.india') %></td>
 				<td><%= t('graph.local_police') %></td>
 				<td>1</td>
 			</tr>
 			<tr>
-				<td class="indent"><%= t('graph.singapore') %></td>
-				<td><%= t('graph.federal_police') %></td>
+				<td class="indent"></td>
+				<td><%= t('graph.state_police') %></td>
+				<td>1</td>
+			</tr>
+			<tr>
+				<td class="indent"><%= t('graph.italy') %></td>
+				<td><%= t('graph.state_police') %></td>
+				<td>1</td>
+			</tr>
+			<tr>
+				<td class="indent"><%= t('graph.korea') %></td>
+				<td><%= t('graph.local_police') %></td>
 				<td>1</td>
 			</tr>
 			<tr>
 				<td class="indent"><%= t('graph.united_kingdom') %></td>
 				<td><%= t('graph.local_police') %></td>
-				<td>1</td>
-			</tr>
-			<tr>
-				<td class="indent"><%= t('graph.usa') %></td>
-				<td><%= t('graph.state_agency') %></td>
-				<td>1</td>
-			</tr>
-			<tr class="highlight">
-				<td><%= t('graph.criminal_subpoenas') %></td>
-				<td>Total</td>
-				<td>1</td>
-			</tr>
-			<tr>
-				<td class="indent"><%= t('graph.usa') %></td>
-				<td><%= t('graph.federal_law_enforcement') %></td>
-				<td>1</td>
+				<td>2</td>
 			</tr>
 		</table>
 	</div>
 </div>
+
 <div class="clear"></div>
-<br><br><br><br>
+<br /> <br /> <br /> <br />
+
 <div class="col-md-3">
   <section class="scorecard">
-    <h2><%= t('dates.jan') %> – <%= t('dates.jun') %> 2017</h2>
+    <h2><%= t('dates.jul') %> – <%= t('dates.dec') %> 2017</h2>
     <dl>
       <dt><%= t('privacy.total_preservation_requests') %></dt>
       <dd>1</dd>
     </dl>
   </section>
 </div>
+
 <div class="col-md-8">
   <h2><%= t('privacy.preservation_requests_title') %></h2>
   <%= t('privacy.preservation_requests_intro') %>
 </div>
+
+
 <div class="clear"></div>
-<br><br><br><br>
+<br /> <br /> <br /> <br />
+
 <div class="col-md-3">
   <section class="scorecard">
-    <h2><%= t('dates.jan') %> – <%= t('dates.jun') %> 2017</h2>
+    <h2><%= t('dates.jul') %> – <%= t('dates.dec') %> 2017</h2>
     <dl>
       <dt><%= t('privacy.total_number_of_emergency_disclosures') %></dt>
-      <dd>16</dd>
+      <dd>14</dd>
     </dl>
   </section>
 </div>
+
 <div class="col-md-8">
   <h2><%= t('privacy.emergency_disclosures_title') %></h2>
   <%= t('privacy.emergency_disclosures_intro') %>
 </div>
+
 <div class="clear"></div>
 <br><br>
+
 <div class="col-md-8 col-md-offset-2">
 	<div class="story story_bottom">
 		<h3>
-			<small><%= t('dates.jan') %> – <%= t('dates.jun') %> 2017</small><br>
+			<small><%= t('dates.jul') %> – <%= t('dates.dec') %> 2017</small><br />
 			<%= t('privacy.total_number_of_emergency_disclosures') %>
 		</h3>
-		<hr>
+		<hr />
 		<table>
 			<tr class="indent">
 				<td><%= t('privacy.total_emergency_requests') %></td>
-				<td>2</td>
+				<td>1</td>
 			</tr>
 			<tr class="indent">
 				<td><%= t('privacy.total_voluntary_disclosures') %></td>
-				<td>14</td>
+				<td>13</td>
 			</tr>
 		</table>
 	</div>
 </div>
+
 <div class="clear"></div>
-<br><br><br><br>
+<br /> <br /> <br /> <br />
+
+
 <div class="col-md-4">
   <div class="story">
-    <a href="https://commons.wikimedia.org/wiki/File:LED_Verkehrssicherungsbalken.jpg"><img src="./images/story_emergency.png" alt=""></a>
+    <a href="//commons.wikimedia.org/wiki/File:LED_Verkehrssicherungsbalken.jpg"><img src="./images/story_emergency.png"></a>
     <h3><%= t('privacy.story_emergency_title') %></h3>
     <p><%= t('privacy.story_emergency_body') %></p>
   </div>
 </div>
+
 <div class="col-md-4">
   <div class="story">
-    <a href="https://commons.wikimedia.org/wiki/White_House#mediaviewer/File:SouthPorticoChristmas.jpg"><img src="./images/story_whitehouse.png" alt=""></a>
+    <a href="//commons.wikimedia.org/wiki/White_House#mediaviewer/File:SouthPorticoChristmas.jpg"><img src="./images/story_whitehouse.png"></a>
     <h3><%= t('privacy.story_whitehouse_title') %></h3>
     <p><%= t('privacy.story_whitehouse_body') %></p>
   </div>
 </div>
+
 <div class="col-md-4">
   <div class="story">
-    <a href="https://commons.wikimedia.org/wiki/File:Suicide_Prevention_Day.jpg"><img src="./images/story_suicide.png" alt=""></a>
+    <a href="//commons.wikimedia.org/wiki/File:Suicide_Prevention_Day.jpg"><img src="./images/story_suicide.png"></a>
     <h3><%= t('privacy.story_suicide_title') %></h3>
     <p><%= t('privacy.story_suicide_body') %></p>
   </div>
 </div>
+
 <div class="clear"></div>
 <br><br>
+
 <div class="analytics">
 	<h2><%= t('privacy.graph_emergency_disclosure') %></h2>
 	<ul class="tabs">
 		<li>
 			<a class="active voluntary_disclosure" id="voluntary_disclosure_juldec14" href="javascript: void(0);">
-				<%= t('dates.jan') %> - <%= t('dates.jun') %> 2017
+				<%= t('dates.jul') %> - <%= t('dates.dec') %> 2017
 			</a>
 		</li>
 	</ul>
@@ -340,6 +383,8 @@
 		</div>
 	</div>
 </div>
+
+
 <!-- Translations for JS -->
 <input type="hidden" id="t_total_requests" value="<%= t('privacy.total_requests') %>">
 <input type="hidden" id="t_request_granted" value="<%= t('graph.request_granted') %>">
@@ -374,6 +419,8 @@
 <input type="hidden" id="t_sweden" value="<%= t('graph.sweden') %>">
 <input type="hidden" id="t_korea" value="<%= t('graph.korea') %>">
 <input type="hidden" id="t_croatia" value="<%= t('graph.cro') %>">
+<input type="hidden" id="t_south_africa" value="<%= t('graph.south_africa') %>">
+<input type="hidden" id="t_ireland" value="<%= t('graph.ireland') %>">
 
 <input type="hidden" id="t_criminal_subpoenas" value="<%= t('graph.criminal_subpoenas') %>">
 <input type="hidden" id="t_informal_non_government_requests" value="<%= t('graph.informal_non_government_requests') %>">
