--- a/source/stylesheets/master.css.scss
+++ b/source/stylesheets/master.css.scss
@@ -118,16 +118,6 @@ footer {
 	}
 }
 
-// Visually hide title on navbar on homepage, screenreaders still receive it
-.index .navbar-default .navbar-brand .name {
-	position: absolute;
-	overflow: hidden;
-	clip: rect( 0 0 0 0 );
-	width: 1px;
-	height: 1px;
-	margin: -1px;
-}
-
 .container .jumbotron {
 	padding-left: 24px;
 	padding-top: 38px;
@@ -235,6 +225,10 @@ footer {
 	}
 }
 
+.fineprint--partial_legend {
+	margin-top: 20px;
+}
+
 .story {
 	@include borderandshadow;
 	display: block;
@@ -267,6 +261,15 @@ footer {
 			}
 			.story_missing_link__img {
 				top: -70px;
+			}
+			.story_count_me__img {
+				transform: scale(1.3) translateY(20px);
+			}
+			.story_room__img {
+				transform: scale(1.1);
+			}
+			.story_fair_share__img {
+				transform: scale(1.2);
 			}
 		}
 	}
